--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ buildscript {
   }
 
   dependencies {
-    classpath 'com.android.tools.build:gradle:0.4.1'
+    classpath 'com.android.tools.build:gradle:0.5.+'
   }
+}
+
+repositories {
+    mavenCentral()
 }
